<resources>
    <string name="app_name">My First Words</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="start">Start</string>
    <string name="my_first_words">My First Words</string>
    <string name="add">add</string>
    <string name="find">find</string>
    <string name="delete">delete</string>
    <string name="Word">Word</string>
    <string name="word">Word:</string>
</resources>